# androidsink

./: CMakeLists.txt  Cargo.toml  README.md
examples/: appsink.rs
examples/sink/: .gitignore  build.gradle  settings.gradle
examples/sink/app/: build.gradle
examples/sink/app/src/androidTest/java/tw/mapacode/androidsink/: ExampleInstrumentedTest.java
examples/sink/app/src/main/: AndroidManifest.xml
examples/sink/app/src/main/java/tw/mapacode/androidsink/: AndroidSink.java  MainActivity.java
examples/sink/app/src/main/res/values/: strings.xml
examples/sink/app/src/test/java/tw/mapacode/androidsink/: ExampleUnitTest.java
examples/sink/gradle/wrapper/: gradle-wrapper.properties
src/: lib.rs
src/android/: gstinit.rs
