[package]
name = "androidsink"
version = "0.1.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs.git" }
gtk = { git = "https://github.com/gtk-rs/gtk" }
gio = { git = "https://github.com/gtk-rs/gio" }
glib = { git = "https://github.com/gtk-rs/glib" }
