[package]
name = "androidsink"
version = "0.1.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
gst = { package = "gstreamer", version = "0.16.4" }
gst-app = { package = "gstreamer-app", version = "0.16.3" }
gst-audio = { package = "gstreamer-audio", version = "0.16.4" }
glib = "0.10.2"
byte-slice-cast = "1.0.0"
anyhow = "1.0.33"
derive_more = "0.99.11"
lazy_static = "1.4.0"
log = "0.4.11"
libc = "0.2.79"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
android_logger = "0.9.0"
