[package]
name = "androidsink"
version = "0.1.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
gst = { package = "gstreamer", version = "0.16.4" }
gst-app = { package = "gstreamer-app", version = "0.16.3" }
gst-audio = { package = "gstreamer-audio", version = "0.16.4" }
glib = "0.10.2"
byte-slice-cast = "1.0.0"
anyhow = "1.0.33"
derive_more = "0.99.11"
libc = "0.2.79"
dlopen = "0.1.8"
once_cell = "1.4.1"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17", default-features = false }
gst_sys = { package = "gstreamer-sys", version = "0.9.1"}
ndk-sys = "0.2.1"
